--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "express": "^4.16.3",
+    "file-class": "^0.1.3",
     "firebase": "^5.4.2",
+    "hbs": "^4.0.1",
     "socket.io": "^2.1.1"
   }
 }
