--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
     "file-class": "^0.1.3",
     "firebase": "^5.4.2",
